Session id tweaks